--- a/index.css
+++ b/index.css
@@ -30,8 +30,6 @@ html {
 }
 
 .hero .title {
-  font-family: 'Kaushan Script', sans-serif;
-  transform: rotate(-5deg);
   font-size: 5rem;
   color: whitesmoke;
 }
@@ -132,17 +130,17 @@ html {
   color: #1f2c6c;
 }
 
-.main-content .section-dark.my-work {
+.main-content .section-dark.projects {
   padding: 120px;
 }
 
 @media (max-width: 599px) {
-  .main-content .section-dark.my-work {
+  .main-content .section-dark.projects {
     padding: 75px 20px;
   }
 }
 
-.main-content .section-dark.my-work .work-item {
+.main-content .section-dark.projects .work-item {
   margin-bottom: 1rem;
   -webkit-transition: all .1s ease-in-out;
   transition: all .1s ease-in-out;
@@ -152,7 +150,7 @@ html {
   box-shadow: 0 5px 20px rgba(14, 25, 80, 0.3);
 }
 
-.main-content .section-dark.my-work .work-item:hover {
+.main-content .section-dark.projects .work-item:hover {
   -webkit-transform: scale(1.055) translateY(-2px);
   transform: scale(1.055) translateY(-2px);
   -webkit-box-shadow: 0 2px 25px 0 rgba(30, 30, 30, 0.1);
@@ -190,54 +188,27 @@ html {
 }
 
 .main-content .section-light.skills {
+  background-color: #43485c;
+  color: white;
   padding: 100px;
 }
 
 @media (max-width: 599px) {
   .main-content .section-light.skills {
+    background-color: #43485c;
+    color: white;
     padding: 50px 20px 40px 20px;
     padding-bottom: 20px;
   }
 }
 
+.main-content .section-light.skills .title,
+.main-content .section-light.skills .subtitle {
+  color: white;
+}
+
 .main-content .section-light.skills h1 {
   padding: 10px;
-}
-
-.main-content .section-light.contact {
-  padding: 200px;
-}
-
-.main-content .section-light.contact button {
-  width: 100%;
-  background-color: #43485c;
-  color: white;
-  height: 50px;
-  font-size: 1.1rem;
-  text-transform: uppercase;
-  font-family: 'Poppins', sans-serif;
-}
-
-@media (max-width: 599px) {
-  .main-content .section-light.contact {
-    padding: 60px 20px;
-  }
-}
-
-.main-content .section-color.services {
-  padding: 100px;
-  background-color: #43485c;
-  color: white;
-}
-
-.main-content .section-color.services .title,
-.main-content .section-color.services .subtitle {
-  color: white;
-}
-
-.main-content .section-color.services i {
-  font-size: 3rem;
-  padding: 20px;
 }
 
 .main-content .section-title {
@@ -255,7 +226,7 @@ html {
   height: 80px;
   line-height: 25px;
   text-align: center;
-  background: #1f2c6c;
+  background: #43485c;
   color: whitesmoke;
   padding-top: 2rem;
 }
