--- a/index.css
+++ b/index.css
@@ -10,9 +10,18 @@
 }
 
 html {
+  background-color: #252829;
   font-family: 'Poppins', Lato, Tahoma, sans-serif;
   width: 100%;
   min-height: 100%;
+}
+
+strong {
+  color: white;
+}
+
+a {
+  color: #50e9ac;
 }
 
 .header-wrapper {
@@ -20,8 +29,7 @@ html {
 }
 
 .hero {
-  background-image: url(https://picsum.photos/id/381/1920/1080);
-  background: linear-gradient(rgba(31, 44, 108, 0.65), rgba(31, 44, 108, 0.65)), rgba(0, 0, 0, 0.55) url("https://picsum.photos/id/381/1920/1080") no-repeat;
+  background: linear-gradient(rgba(7, 7, 7, 0.65), rgba(45, 90, 73, 0.65)), rgba(0, 0, 0, 0.55) url("media/background.jpg") no-repeat;
   background-attachment: fixed;
   background-size: cover;
   color: white;
@@ -47,7 +55,7 @@ html {
 
 .hero .hero-foot {
   height: 50px;
-  background: white;
+  background: #131516;
   box-shadow: 0 2px 15px rgba(0, 0, 0, 0.082);
 }
 
@@ -77,15 +85,15 @@ html {
 }
 
 .hero .hero-foot .hero-foot--wrapper .hero-menu-desktop ul li.is-active a {
-  border-bottom: 2px solid #1f2c6c;
+  border-bottom: 2px solid #50e9ac;
 }
 
 .hero .hero-foot .hero-foot--wrapper .hero-menu-desktop ul li a {
-  color: #1f2c6c;
+  color: #50e9ac;
 }
 
 .hero .hero-foot .hero-foot--wrapper .hero-menu-desktop ul li a:hover {
-  color: #1f2c6c;
+  color: #50e9ac;
   transition: all .2s ease-in-out;
   border-bottom: 2px solid #1f2c6c;
 }
@@ -96,38 +104,13 @@ html {
   font-family: 'Poppins', sans-serif;
 }
 
+.box {
+  background-color:#252829;
+}
+
 .main-content .section-dark {
-  background-color: #f0f3f5;
+  background-color: #131516;
   padding: 60px 0px;
-}
-
-.main-content .section-dark.resume {
-  height: 400px;
-  padding-top: 100px;
-}
-
-@media (max-width: 599px) {
-  .main-content .section-dark.resume {
-    padding-top: 75px;
-  }
-}
-
-.main-content .section-dark.resume .title {
-  padding: 20px;
-}
-
-.main-content .section-dark.resume button {
-  border: 2px solid #43485c;
-  background: white;
-  color: #43485c;
-  height: 50px;
-  width: 250px;
-  font-size: 1rem;
-  text-transform: uppercase;
-}
-
-.main-content .section-dark.resume .fa-download {
-  color: #1f2c6c;
 }
 
 .main-content .section-dark.projects {
@@ -158,6 +141,8 @@ html {
 }
 
 .main-content .section-light {
+  background-color: #252829;
+  color: white;
   padding: 30px;
 }
 
@@ -166,6 +151,7 @@ html {
 }
 
 .main-content .section-light.about-me .is-larger {
+  color: white;
   font-size: 1.2rem;
 }
 
@@ -187,32 +173,8 @@ html {
   }
 }
 
-.main-content .section-light.skills {
-  background-color: #43485c;
-  color: white;
-  padding: 100px;
-}
-
-@media (max-width: 599px) {
-  .main-content .section-light.skills {
-    background-color: #43485c;
-    color: white;
-    padding: 50px 20px 40px 20px;
-    padding-bottom: 20px;
-  }
-}
-
-.main-content .section-light.skills .title,
-.main-content .section-light.skills .subtitle {
-  color: white;
-}
-
-.main-content .section-light.skills h1 {
-  padding: 10px;
-}
-
 .main-content .section-title {
-  color: #43485c;
+  color: #50e9ac;
   text-transform: uppercase;
   font-size: 1.8rem;
   letter-spacing: 2px;
@@ -226,7 +188,7 @@ html {
   height: 80px;
   line-height: 25px;
   text-align: center;
-  background: #43485c;
+  background: #252829;
   color: whitesmoke;
   padding-top: 2rem;
 }
@@ -259,7 +221,7 @@ html {
   z-index: 99;
   border: none;
   outline: none;
-  background-color: rgba(31, 44, 108, 0.65);
+  background-color: #50e9ac;
   color: white;
   cursor: pointer;
   border-radius: 50%;
